--- a/templates/rsa_signature.html
+++ b/templates/rsa_signature.html
@@ -438,12 +438,12 @@
       
           // Kiểm tra p và q có phải số nguyên tố không
           if (!isPrime(p)) {
-            alert("Số P phải là số nguyên tố!");
+            alert("Số p phải là số nguyên tố!");
             return;
           }
       
           if (!isPrime(q)) {
-            alert("Số Q phải là số nguyên tố!");
+            alert("Số q phải là số nguyên tố!");
             return;
           }
       
@@ -453,7 +453,7 @@
       
           // Kiểm tra e nguyên tố cùng nhau với phi(n)
           if (gcd(eValue, phiN) !== 1) {
-            alert("Số E phải là số nguyên tố cùng nhau với φ(n)!");
+            alert("Số e phải là số nguyên tố cùng nhau với φ(n)!");
             return;
           }
       
